# VoidChat

./: .cursorrules  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  seed_data.py  transcripts.py  void.sqlite
.llms/: FastHTML.txt  MonsterUI-ctx.txt  MonsterUI-examples.txt  instructions.txt  llm_instructions.txt  monsterui_agent_instructions.md  styling-guide.md
assets/: tailwind.config.js
assets/css/: custom_theme.css  custom_theme_green.css  input.css  output.css
assets/js/: themeToggle.js
chroma/: chroma.sqlite3
migrations/: env.py
migrations/versions/: 06086989da5d_pushing_changes.py  2e419b2e70c0_pushing_changes.py  be336a9bcd44_pushing_changes.py  cfaf7512d0c2_pushing_changes.py  d598a2bdce39_pushing_changes.py  efa53df589bd_pushing_changes.py  f8bdf6269442_pushing_changes.py
scripts/: chroma_index.py  create_page.py  monaco.py  riza_test.py  subtest.py  tailwind_install.py
scripts/tests/: pgvec_index.py  subtest.py
src/: cli.py  config.py  main.py  route_collector.py
src/modules/: __init__.py
src/modules/admin/: routes.py
src/modules/admin/components/: dashboard.py  modal_form.py  model_table.py  navbar.py  pagination.py  renderers.py  sidebar.py
src/modules/auth/: models.py
src/modules/auth/components/: login.py  profile_forms.py  registration.py
src/modules/chat/: agent.py  chat_agent.py  coder_agent.py  html_agent.py  models.py  routes.py
src/modules/gallery/: models.py  routes.py
src/modules/playground/: models.py  routes.py
src/modules/shared/: models.py  templates.py  toaster.py  validators.py
(+47 files in other folders)
